--- a/Task_1/appsettings.json
+++ b/Task_1/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Data": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb; database=TestDataBase; Integrated Security=True;"
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb; database=SQLandLINQ; Integrated Security=True;"
   }
 }
